# GothicAssetWizard

./: CMakeLists.txt
Backend/src/: Main.cpp
Backend/src/OS/: Terminal.Windows.cpp  Terminal.hpp
